package com.lab6.vehicle;

public interface Run {
    public String getName();

    public double getMaxSpeed();

    public double getWeight();

    public void move();

}
