package com.lab6.vehicle.tractors;

import com.lab6.vehicle.Tractor;

public class TractorCrawler extends Tractor {
    public TractorCrawler(String name, double weight, double maxSpeed, String type) {
        super(name, weight, maxSpeed, type);
    }
}
