package com.lab6.vehicle.tractors;

import com.lab6.vehicle.Tractor;

public class TractorWheeled extends Tractor {
    public TractorWheeled(String name, double weight, double maxSpeed, String type) {
        super(name, weight, maxSpeed, type);
    }
}
